pm: Enable device pm per power state
Enable device power management individually per power state.
This allows targets tuning which state should trigger
device power management or completely disable it simply not
enabling it in any power state.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/dts/arm/silabs/efr32mg24.dtsi
+++ b/dts/arm/silabs/efr32mg24.dtsi
@@ -74,6 +74,7 @@
 				power-state-name = "standby";
 				min-residency-us = <20000>;
 				exit-latency-us = <2000>;
+				zephyr,pm-device-enabled;
 			};
 		};
 	};
