--- a/dts/arm/nxp/nxp_rt11xx.dtsi
+++ b/dts/arm/nxp/nxp_rt11xx.dtsi
@@ -77,6 +77,7 @@
 				substate-id = <IMX_SPC_SET_POINT_10_SUSPEND>;
 				min-residency-us = <5000>;
 				exit-latency-us = <500>;
+				zephyr,pm-device-enabled;
 			};
 		};
 	};
