--- a/dts/arm/silabs/efr32bg2x.dtsi
+++ b/dts/arm/silabs/efr32bg2x.dtsi
@@ -71,6 +71,7 @@
 				power-state-name = "suspend-to-idle";
 				min-residency-us = <260>;
 				exit-latency-us = <250>;
+				zephyr,pm-device-enabled;
 			};
 
 			/*
@@ -84,6 +85,7 @@
 				power-state-name = "standby";
 				min-residency-us = <20000>;
 				exit-latency-us = <2000>;
+				zephyr,pm-device-enabled;
 			};
 		};
 	};
