maintainers: arduino-core: Add DhruvaG2000 as maintainer
Mark this subsystem as maintained and add DhruvaG2000
as maintainer.

Signed-off-by: TOKITA Hiroshi <tokita.hiroshi@gmail.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -5262,6 +5262,15 @@ West:
   labels:
     - "area: Storage"
 
+"West project: gsoc-2022-arduino-core":
+  status: maintained
+  maintainers:
+    - dhruvag2000
+  files:
+    - snippets/arduino-core/
+  labels:
+    - manifest-arduino-api
+
 "West project: hal_adi":
   status: maintained
   maintainers:
