haptics: cs40l50: Adds support for CS40L50 haptic driver
Adds support for CS40L50 haptic driver

Signed-off-by: Ricardo Rivera-Matos <ricardo.rivera-matos@cirrus.com>

--- a/drivers/haptics/CMakeLists.txt
+++ b/drivers/haptics/CMakeLists.txt
@@ -3,4 +3,5 @@
 zephyr_library()
 zephyr_syscall_header(${ZEPHYR_BASE}/include/zephyr/drivers/haptics.h)
 
+zephyr_library_sources_ifdef(CONFIG_HAPTICS_CS40L50 cs40l50.c)
 zephyr_library_sources_ifdef(CONFIG_USERSPACE haptics_handlers.c)
