sys: Add wakeup source subsystem
Wakeup sources can be identified by the wakeup-source
devicetree property, the properties required to enable and
disable a wakeup-source on a soc level can then be
extracted from the identified wakeup source devicetree
nodes.

This commit adds a structure to store the information
required to enable a wakeup-source, and the required utils
to define these structures.

Signed-off-by: Bjarki Arge Andreasen <bjarki@arge-andreasen.me>
(cherry picked from pull/64814)

--- a/dts/bindings/base/pm.yaml
+++ b/dts/bindings/base/pm.yaml
@@ -16,6 +16,11 @@ properties:
       Wake up capable devices are disabled (interruptions will not wake up
       the system) by default but they can be enabled at runtime if necessary.
 
+  wakeup-source-ids:
+    type: array
+    description: |
+      Property to identify vendor specific wakeup sources.
+
   power-domain:
     type: phandle
     description: |
