--- a/subsys/Kconfig
+++ b/subsys/Kconfig
@@ -50,6 +50,7 @@ source "subsys/usb/device/Kconfig"
 source "subsys/usb/device_next/Kconfig"
 source "subsys/usb/host/Kconfig"
 source "subsys/usb/usb_c/Kconfig"
+source "subsys/wakeup_source/Kconfig"
 source "subsys/zbus/Kconfig"
 # zephyr-keep-sorted-stop
 
