dts: bindings: input: Add wakeup-source prop to gpio-keys
Add the wakeup-source property to the gpio-keys.yaml
bindings file. This allows for the key to be detected and
used by the wakeup source subsystem.

Signed-off-by: Bjarki Arge Andreasen <bjarki@arge-andreasen.me>
(cherry picked from pull/64814)

--- a/dts/bindings/input/gpio-keys.yaml
+++ b/dts/bindings/input/gpio-keys.yaml
@@ -55,3 +55,6 @@ child-binding:
     zephyr,code:
       type: int
       description: Key code to emit.
+    wakeup-source:
+      type: boolean
+      description: Key is capable of being used as a wakeup source
