dts: bindings: base: Add interrupt-gpios base property
Add interrupt-gpios property which will be used to specify
interrupts routed through GPIOs.

This is useful for the wakeup source subsystem which needs to
identify these gpios to enable them as wakeup sources.

Signed-off-by: Bjarki Arge Andreasen <bjarki@arge-andreasen.me>
(cherry picked from pull/64814)

--- a/dts/bindings/base/base.yaml
+++ b/dts/bindings/base/base.yaml
@@ -92,3 +92,11 @@ properties:
   mbox-names:
     type: string-array
     description: Provided names of mailbox / IPM channel specifiers
+
+  interrupt-gpios:
+    type: phandle-array
+    description: GPIO routed interrupts for device
+
+  interrupt-gpio-names:
+    type: string-array
+    description: Name of each GPIO routed interrupt
