drivers: clock_control: implement clock_control_setpoint for LPC syscon
Add implementation of clock_control_setpoint for the LPC syscon clock
driver. This implementation requires that the SOC provide definitions
for the clock setpoints, which will expand to a function for each
setpoint. The clock controller then simply calls the setpoint function
to apply the selected setpoint.

Signed-off-by: Daniel DeGrasse <daniel.degrasse@nxp.com>

--- a/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S6x_common.dtsi
@@ -12,6 +12,7 @@
 #include <zephyr/dt-bindings/inputmux/inputmux_trigger_ports.h>
 #include <zephyr/dt-bindings/memory-attr/memory-attr-arm.h>
 #include <arm/armv8-m.dtsi>
+#include <zephyr/dt-bindings/clock/nxp_lpc55xxx_clocks.h>
 
 / {
 	aliases {
