kernel: Device deferred initialization
Currently, all devices are initialized at boot time (following their
level and priority order). This patch introduces deferred
initialization: by registering a callback to be run before devices are
initialized (register it at SYS_INIT(EARLY), for instance), one can
tell Zephyr to not initialize a given device.

To initialize deferred devices, one has to call `device_init()`.

To reduce processing overhead for those who don't care about this
feature, it is shielded behind CONFIG_DEVICE_DEFER_INIT.

Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -1297,6 +1297,17 @@ config DEVICE_MUTABLE
 	  Support mutable devices. Mutable devices are instantiated in SRAM
 	  instead of Flash and are runtime modifiable in kernel mode.
 
+config DEVICE_DEFER_INIT
+	bool "Device deferred initialization"
+	help
+	  Allows device initialization to be deferred to a later time,
+	  instead of automatically happening at boot time. To defer
+	  initialization of a given device, one has to register,
+	  via device_before_init_register_callback(), a callback
+	  that will be called before each device initialization, to decide
+	  if initialization shall proceed or be deferred. To initialize a
+	  device later, one has to use device_init().
+
 endmenu
 
 rsource "Kconfig.vm"
