--- a/subsys/pm/Kconfig
+++ b/subsys/pm/Kconfig
@@ -71,12 +71,11 @@ config PM_DEVICE
 	bool "Device Power Management"
 	help
 	  This option enables the device power management interface.  The
-	  interface consists of hook functions implemented by device drivers
-	  that get called by the power manager application when the system
-	  is going to suspend state or resuming from suspend state. This allows
-	  device drivers to do any necessary power management operations
-	  like turning off device clocks and peripherals. The device drivers
-	  may also save and restore states in these hook functions.
+	  interface implemented by device drivers are called by the power
+	  management subsystem. This allows device drivers to do any
+	  necessary power management operations like turning off
+	  device clocks and peripherals. Device drivers may also save
+	  and restore states in these hook functions.
 
 if PM_DEVICE
 
@@ -113,6 +112,16 @@ config PM_DEVICE_RUNTIME
 	  Enable Runtime Power Management to save power. With device runtime PM
 	  enabled, devices can be suspended or resumed based on the device
 	  usage even while the CPU or system is running.
+
+config PM_DEVICE_SYSTEM_MANAGED
+	bool "System Managed Device Power Management"
+	default y
+	help
+	  This option enables the device system managed power management.  The
+	  power management subsystem will suspend devices when it goes to idle
+	  if the SoC power state set has power management enabled. In opposite,
+	  when the SoC becomes active all suspended devices are resumed.
+
 
 endif # PM_DEVICE
 
