--- a/dts/bindings/timer/arm,armv8m-systick.yaml
+++ b/dts/bindings/timer/arm,armv8m-systick.yaml
@@ -5,8 +5,4 @@ description: ARMv8-M System Tick
 
 compatible: "arm,armv8m-systick"
 
-include: base.yaml
-
-properties:
-  reg:
-    required: true
+include: "arm,cortex-m-systick.yaml"
