tests/kernel/device: Fix device deferred init on qemu_x86_tiny
Device initialization can happen before MMU is initialised. As the code
for the callback deferring mechanism may be far from initialisation
code, it may not be mapped yet. On qemu_x86_tiny this can cause an
exception like:

    ERROR   - SeaBIOS (version zephyr-v1.0.0-0-g31d4e0e-dirty-2020071[...]
    Booting from ROM..ASSERTION FAIL [page_frames_initialized] @ \
        WEST_TOPDIR/zephyr/kernel/mmu.c:1395
    	page fault at 0x401974f6 happened too early
    E: EAX: 0x00000001, EBX: 0x00009500, ECX: 0x00000000, EDX: 0x00000000
    E: ESI: 0x00000000, EDI: 0x00001000, EBP: 0x401935dc, ESP: 0x401935d8
    E: EFLAGS: 0x00000046 CS: 0x0008 CR3: 0x00171000
    E: call trace:
    E: EIP: 0x4013ef3b
    E:      corrupted? (bp=0x401935dc)
    E: >>> ZEPHYR FATAL ERROR 4: Kernel panic on CPU 0
    E: Current thread: 0x40193728 (unknown)
    E: Halting system

This patch introduces a __DEVICE_INIT attribute, which moves code
to just after the other device initialisers, thus avoiding this issue.
To avoid messing with linking on unaffected devices, this behaviour is
shielded by CONFIG_DEVICE_DEFER_CALLBACK_SECTION, currently only
selected for qemu_x86_tiny.

Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>

--- a/boards/qemu/x86/Kconfig
+++ b/boards/qemu/x86/Kconfig
@@ -17,3 +17,4 @@ config BOARD_QEMU_X86_LAKEMONT
 config BOARD_QEMU_X86_TINY
 	bool
 	select CPU_HAS_FPU
+	select DEVICE_DEFER_CALLBACK_SECTION if DEVICE_DEFER_INIT
