drivers: nfc: NFC-driver structure + nRF-NFC and nt3h2x11 support
NFC driver structure to support multiple NFC driver with the same API

Signed-off-by: Hessel van der Molen <hvandermolen@dexels.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -58,6 +58,7 @@ source "drivers/misc/Kconfig"
 source "drivers/mm/Kconfig"
 source "drivers/modem/Kconfig"
 source "drivers/net/Kconfig"
+source "drivers/nfc/Kconfig"
 source "drivers/pcie/Kconfig"
 source "drivers/peci/Kconfig"
 source "drivers/pinctrl/Kconfig"
