riscv: Example RISC-V hardware breakpoint implementation
Example for https://github.com/zephyrproject-rtos/zephyr/issues/69532

Signed-off-by: Robert Zieba <robertzieba@google.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -634,6 +634,9 @@ config ARCH_HAS_EXTRA_EXCEPTION_INFO
 config ARCH_HAS_GDBSTUB
 	bool
 
+config ARCH_HAS_HW_BREAKPOINT
+	bool
+
 config ARCH_HAS_COHERENCE
 	bool
 	help
