drivers: sensors: Add ADI MAX22190 driver
This initial implementaion covers functionality of MAX22190PMB
modules with preset mod1 - 16bit frane, no CRC.

Signed-off-by: Stoyan Bogdanov <sbogdanov@baylibre.com>

--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -174,6 +174,7 @@ source "drivers/sensor/lsm9ds0_mfd/Kconfig"
 source "drivers/sensor/ltrf216a/Kconfig"
 source "drivers/sensor/max17055/Kconfig"
 source "drivers/sensor/max17262/Kconfig"
+source "drivers/sensor/max22190/Kconfig"
 source "drivers/sensor/max30101/Kconfig"
 source "drivers/sensor/max31855/Kconfig"
 source "drivers/sensor/max31865/Kconfig"
