--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -94,6 +94,7 @@ add_subdirectory_ifdef(CONFIG_LSM9DS0_MFD lsm9ds0_mfd)
 add_subdirectory_ifdef(CONFIG_LTR_F216A ltrf216a)
 add_subdirectory_ifdef(CONFIG_MAX17055 max17055)
 add_subdirectory_ifdef(CONFIG_MAX17262 max17262)
+add_subdirectory_ifdef(CONFIG_MAX22190 max22190)
 add_subdirectory_ifdef(CONFIG_MAX30101 max30101)
 add_subdirectory_ifdef(CONFIG_MAX31855 max31855)
 add_subdirectory_ifdef(CONFIG_MAX31865 max31865)
