samples: sensors: Add sample for ADI MAX22190
Sample is using SDP-120 connector to SDP-I adapted with PMOD
connector where MAX22190 is attached

Signed-off-by: Stoyan Bogdanov <sbogdanov@baylibre.com>

--- a/boards/adi/sdp_k1/adi_sdp_k1.dts
+++ b/boards/adi/sdp_k1/adi_sdp_k1.dts
@@ -78,3 +78,10 @@
 	current-speed = <115200>;
 	status = "okay";
 };
+
+sdp_spi: &spi5 {
+	pinctrl-0 = <&spi5_sck_ph6 &spi5_miso_pf8 &spi5_mosi_pf9>;
+	pinctrl-names = "default";
+	cs-gpios = <&gpiob 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	status = "okay";
+};
