sched: SCHED_MULTIQ support ELF algo
In multi level queue, the priority already decide by thread's priority.
We only compare the deadline when adding thread to multi level queue.

The logic is similar with `z_priq_dumb_add`.

Signed-off-by: TaiJu Wu <tjwu1217@gmail.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -338,7 +338,6 @@ config SCHED_SCALABLE
 
 config SCHED_MULTIQ
 	bool "Traditional multi-queue ready queue"
-	depends on !SCHED_DEADLINE
 	help
 	  When selected, the scheduler ready queue will be implemented
 	  as the classic/textbook array of lists, one per priority
@@ -348,8 +347,7 @@ config SCHED_MULTIQ
 	  runs in O(1) time in almost all circumstances with very low
 	  constant factor.  But it requires a fairly large RAM budget
 	  to store those list heads, and the limited features make it
-	  incompatible with features like deadline scheduling that
-	  need to sort threads more finely, and SMP affinity which
+	  incompatible with features like SMP affinity which
 	  need to traverse the list of threads.  Typical applications
 	  with small numbers of runnable threads probably want the
 	  DUMB scheduler.
