soc: add stm32f072x8 soc to stm32f0x series
Adds the stm32f072x8 soc to the list of SOCs in the stm32f0x series.

Signed-off-by: Jonas Otto <jonas@jonasotto.com>

--- a/soc/st/stm32/soc.yml
+++ b/soc/st/stm32/soc.yml
@@ -13,6 +13,7 @@ family:
     - name: stm32f042x6
     - name: stm32f051x8
     - name: stm32f070xb
+    - name: stm32f072x8
     - name: stm32f072xb
     - name: stm32f091xc
     - name: stm32f098xx
