--- a/subsys/bluetooth/Kconfig
+++ b/subsys/bluetooth/Kconfig
@@ -127,8 +127,8 @@ config BT_CONN_TX
 if BT_CONN
 config BT_HCI_ACL_FLOW_CONTROL
 	bool "Controller to Host ACL flow control support"
-	# Enable if building a Host-only build
-	default y if !BT_CTLR && !BT_STM32_IPM && !BT_ESP32  && !BT_STM32WBA
+	# Enable if building a Host-only builds
+	default y if !BT_CTLR && !BT_STM32_IPM && !BT_ESP32  && !BT_STM32WBA && !BT_NXP_IPM
 	# Enable if building a Controller-only build
 	default y if BT_HCI_RAW
 	select POLL
