--- a/west.yml
+++ b/west.yml
@@ -193,7 +193,8 @@ manifest:
       groups:
         - hal
     - name: hal_nxp
-      revision: f436a4529f284067af29ad72af5bd0ad51b09f3e
+      url: https://github.com/Sendrato/hal_nxp.git
+      revision: master-20230929-qn9090-v2.6.12
       path: modules/hal/nxp
       groups:
         - hal
