drivers: pwm: pwm_b9x: Rework handling inverted output
Telink driver pwm_b9x supports inverted PWM channel. So it's possible to
use inverted PWM output together with inverted PWM polarity to achieve
usual PWM. But in this case there was an issue with Pin Control:
- Pin Control is defined in pwm .dts node
- PWM polarity is defined in a child pwm_leds .dts node
As result (in case of using inverted pin together with inverted polarity)
PWM driver connects all output PWM pins but at this time PWM channel
(defined in a child node pwm_leds) is not stated so we have high level
at PWM output till starting PWM channel with inverted polarity.
This issue produced blinking during SW startup.

Provided workaround was to read PWM child node - pwm_leds and init
all PWM channels before output pin connecting. The main drawback was
that it's ​definitely to use child node (no possibility to use pwm
without pwm_leds) and it breaks driver fundamentals it should be possible
to use parent driver without its child.

Now, instead using workaround, pwm pin control is splitted into parts
for each channel. And each channel's output is connected in time when
this channel is configured (not during PWM driver start).

Signed-off-by: Andrii Bilynskyi <andrii.bilynskyi@telink-semi.com>

--- a/boards/riscv/tlsr9528a/tlsr9528a-common.dtsi
+++ b/boards/riscv/tlsr9528a/tlsr9528a-common.dtsi
@@ -192,8 +192,7 @@
 &pwm0 {
 	status = "okay";
 	clock-frequency = <93750>;
-	pinctrl-0 = <&pwm_ch0_pd0_default>;
-	pinctrl-names = "default";
+	pinctrl-ch0 = <&pwm_ch0_pd0_default>;
 };
 
 &lspi {
