--- a/boards/riscv/tlsr9518adk80d/tlsr9518adk80d-common.dtsi
+++ b/boards/riscv/tlsr9518adk80d/tlsr9518adk80d-common.dtsi
@@ -177,8 +177,7 @@
 &pwm0 {
 	status = "okay";
 	clock-frequency = <93750>;
-	pinctrl-0 = <&pwm_ch0_pb4_default>;
-	pinctrl-names = "default";
+	pinctrl-ch0 = <&pwm_ch0_pb4_default>;
 };
 
 &pspi {
