--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3305,6 +3305,7 @@ NXP Platforms (MCU):
     - boards/nxp/lpcxpress*/
     - boards/nxp/twr_*/
     - boards/nxp/vmu*/
+    - boards/nxp/*rw*/
     - soc/nxp/imxrt/
     - soc/nxp/kinetis/
     - soc/nxp/lpc/
