MAINTAINERS: associate lorawan tests with area
associate tests to lorwan.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -2368,6 +2368,7 @@ LoRa and LoRaWAN:
     - "area: LoRa"
   tests:
     - sample.driver.lora
+    - lorawan
 
 MAINTAINERS file:
   status: maintained
