Add OS_SDK_ZEPHYR definition to LVGL
This enables us to use it in PXP/VGlite support in LVGL.
(the free rtos define is named OS_SDK_FREE_RTOS)

--- a/modules/lvgl/CMakeLists.txt
+++ b/modules/lvgl/CMakeLists.txt
@@ -17,6 +17,7 @@ zephyr_include_directories(include)
 
 zephyr_compile_definitions(LV_CONF_INCLUDE_SIMPLE=1)
 zephyr_compile_definitions(LV_CONF_PATH=${CMAKE_CURRENT_SOURCE_DIR}/include/lv_conf.h)
+zephyr_library_compile_definitions(OS_SDK_ZEPHYR=1)
 
 zephyr_library_sources(
     ${LVGL_DIR}/src/core/lv_disp.c
