--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -83,7 +83,9 @@ jobs:
           export ZEPHYR_TOOLCHAIN_VARIANT=zephyr
           mkdir -p coverage/reports
           pip3 install gcovr==6.0
-          ./scripts/twister -i --force-color -N -v --filter runnable -p ${{ matrix.platform }} --coverage -T tests --coverage-tool gcovr -xCONFIG_TEST_EXTRA_STACK_SIZE=4096 -e nano
+          ./scripts/twister -i --force-color -N -v --filter runnable -p ${{ matrix.platform }} \
+            --coverage -T tests --coverage-tool gcovr -xCONFIG_TEST_EXTRA_STACK_SIZE=4096 -e nano \
+            --timeout-multiplier 2
 
       - name: Print ccache stats
         if: always()
