dts: arm: nordic: Add qdec label for nRF5340 and nRF54L15
The "qdec" label allows referring default QDEC in consistent way.

Signed-off-by: Marek Pieta <Marek.Pieta@nordicsemi.no>

--- a/dts/arm/nordic/nrf5340_cpuapp_peripherals.dtsi
+++ b/dts/arm/nordic/nrf5340_cpuapp_peripherals.dtsi
@@ -458,7 +458,7 @@ mutex: mutex@30000 {
 	status = "okay";
 };
 
-qdec0: qdec@33000 {
+qdec: qdec0: qdec@33000 {
 	compatible = "nordic,nrf-qdec";
 	reg = <0x33000 0x1000>;
 	interrupts = <51 NRF_DEFAULT_IRQ_PRIORITY>;
