soc: opentitan: (temporarily) disable multithreading and update plic

--- a/boards/lowrisc/opentitan_earlgrey/opentitan_earlgrey_defconfig
+++ b/boards/lowrisc/opentitan_earlgrey/opentitan_earlgrey_defconfig
@@ -6,3 +6,5 @@ CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_BUILD_OUTPUT_BIN=n
+# TODO: verilator boot broken when multi-threading is enabled.
+CONFIG_MULTITHREADING=n
