--- a/boards/adafruit/qt_py_rp2040/adafruit_qt_py_rp2040.dts
+++ b/boards/adafruit/qt_py_rp2040/adafruit_qt_py_rp2040.dts
@@ -27,6 +27,19 @@
 		watchdog0 = &wdt0;
 		led-strip = &ws2812;
 	};
+
+	ws2812: ws2812 {
+		compatible = "worldsemi,ws2812-rpi_pico-pio";
+		status = "okay";
+		gpios = <&gpio0 12 GPIO_ACTIVE_HIGH>;
+		chain-length = <1>;
+		color-mapping = <LED_COLOR_ID_GREEN
+				 LED_COLOR_ID_RED
+				 LED_COLOR_ID_BLUE>;
+		reset-delay = <280>;
+		frequency = <800000>;
+		controller = <&pio1_ws2812>;
+	};
 };
 
 &flash0 {
@@ -129,23 +142,12 @@
 	 * Need to put this on PIO1 as having this on PIO0 causes the GPIO hog to
 	 * not work.
 	 */
-	pio-ws2812 {
-		compatible = "worldsemi,ws2812-rpi_pico-pio";
+	pio1_ws2812: pio-ws2812 {
+		compatible = "raspberrypi,pico-ws2812-controller-pio";
 		status = "okay";
 		pinctrl-0 = <&ws2812_pio1_default>;
 		pinctrl-names = "default";
 		bit-waveform = <3>, <3>, <4>;
-
-		ws2812: ws2812 {
-			status = "okay";
-			gpios = <&gpio0 12 GPIO_ACTIVE_HIGH>;
-			chain-length = <1>;
-			color-mapping = <LED_COLOR_ID_GREEN
-					 LED_COLOR_ID_RED
-					 LED_COLOR_ID_BLUE>;
-			reset-delay = <280>;
-			frequency = <800000>;
-		};
 	};
 };
 
