soc: nordic: Add Kconfigs for DC/DC enablement on nRF52
Adds SoC-level Kconfigs to select which DC/DC modes are enabled
and supported

Signed-off-by: Jamie McCrae <jamie.mccrae@nordicsemi.no>

--- a/dts/arm/nordic/nrf52840.dtsi
+++ b/dts/arm/nordic/nrf52840.dtsi
@@ -61,6 +61,18 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
+			dcdcen: dcdcen@40000578 {
+				compatible = "regulator-fixed";
+				regulator-name = "dcdcen";
+				reg = <0x40000578 0x1>;
+			};
+
+			dcdcen0: dcdcen0@40000580 {
+				compatible = "regulator-fixed";
+				regulator-name = "dcdcen0";
+				reg = <0x40000580 0x1>;
+			};
+
 			gpregret1: gpregret1@4000051c {
 				#address-cells = <1>;
 				#size-cells = <1>;
