--- a/boards/nordic/nrf52840dk/nrf52840dk_nrf52840.dts
+++ b/boards/nordic/nrf52840dk/nrf52840dk_nrf52840.dts
@@ -135,6 +135,16 @@
 	};
 };
 
+&dcdcen {
+	status = "okay";
+	regulator-boot-on;
+};
+
+&dcdcen0 {
+	status = "okay";
+	regulator-boot-on;
+};
+
 &adc {
 	status = "okay";
 };
