--- a/dts/arm/nordic/nrf52840.dtsi
+++ b/dts/arm/nordic/nrf52840.dtsi
@@ -68,9 +68,11 @@
 			};
 
 			dcdcen0: dcdcen0@40000580 {
-				compatible = "regulator-fixed";
+				compatible = "nordic,hvdcdc-regulator";
 				regulator-name = "dcdcen0";
 				reg = <0x40000580 0x1>;
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <3300000>;
 			};
 
 			gpregret1: gpregret1@4000051c {
