drivers: wifi: add dummy wifi driver
add required mbedtls modules

Signed-off-by: Alex Tsitsiura <s07641069@gmail.com>

--- a/dts/riscv/telink/telink_w91.dtsi
+++ b/dts/riscv/telink/telink_w91.dtsi
@@ -22,6 +22,11 @@
 		};
 	};
 
+	wifi: wifi {
+		compatible = "telink,w91-wifi";
+		status = "disabled";
+	};
+
 	soc {
 		#address-cells = <1>;
 		#size-cells = <1>;
