--- a/drivers/wifi/Kconfig
+++ b/drivers/wifi/Kconfig
@@ -40,5 +40,6 @@ source "drivers/wifi/simplelink/Kconfig.simplelink"
 source "drivers/wifi/eswifi/Kconfig.eswifi"
 source "drivers/wifi/esp_at/Kconfig.esp_at"
 source "drivers/wifi/esp32/Kconfig.esp32"
+source "drivers/wifi/telink/Kconfig.w91"
 
 endif # WIFI
