boards: ambiq: Add ADC Functionality
Add Ambiq ADC Driver
Add ADC to apollo4p_evb
Add ADC to apollo4p_blue_kxr_dvb
Add Update HAL module with ADC support
Add Ambiq conf/overlay for ADC Sample

Signed-off-by: Richard Wheatley <richard.wheatley@ambiq.com>

--- a/dts/arm/ambiq/ambiq_apollo4p_blue.dtsi
+++ b/dts/arm/ambiq/ambiq_apollo4p_blue.dtsi
@@ -32,7 +32,38 @@
 		cpu0: cpu@0 {
 			compatible = "arm,cortex-m4f";
 			reg = <0>;
+			cpu-power-states = <&idle &suspend_to_ram>;
 		};
+
+		power-states {
+			idle: idle {
+				compatible = "zephyr,power-state";
+				power-state-name = "suspend-to-idle";
+				/* As Apollo3blue datasheet, run_to_sleep and sleep_to_run transition
+				 * time are both lower than 1us, but considering the software overhead
+				 * we set a bigger value.
+			     */
+				min-residency-us = <100>;
+				exit-latency-us = <5>;
+			};
+
+			suspend_to_ram: suspend_to_ram {
+				compatible = "zephyr,power-state";
+				power-state-name = "suspend-to-ram";
+				/* As Apollo3blue datasheet, run_to_deepsleep transition time is lower than
+				 * 1us and deepsleep_to_run transition time is about 25us,
+				 * but considering the software overhead, we set a bigger value.
+			     */
+				min-residency-us = <2000>;
+				exit-latency-us = <125>;
+			};
+		};
+	};
+
+	/* MRAM region */
+	flash0: flash@18000 {
+		compatible = "soc-nv-flash";
+		reg = <0x00018000 0x1e8000>;
 	};
 
 	/* TCM */
@@ -78,9 +109,9 @@
 			status = "okay";
 		};
 
-		counter0: counter@40008000 {
+		counter0: counter@40008200 {
 			compatible = "ambiq,counter";
-			reg = <0x40008000 0x80>;
+			reg = <0x40008200 0x20>;
 			interrupts = <67 0>;
 			status = "disabled";
 		};
@@ -206,6 +237,18 @@
 			interrupts = <13 0>;
 			status = "disabled";
 			ambiq,pwrcfg = <&pwrcfg 0x4 0x100>;
+		};
+
+		adc0: adc@40038000 {
+			reg = <0x40038000 0x294>;
+			interrupts = <19 0>;
+			interrupt-names = "ADC";
+			channel-count = <10>;
+			vref-mv = <1500>;
+			status = "disabled";
+			#io-channel-cells = <1>;
+			ambiq,pwrcfg = <&pwrcfg 0x4 0x2000>;
+			zephyr,pm-device-runtime-auto;
 		};
 
 		mspi0: spi@40060000 {
