--- a/drivers/adc/CMakeLists.txt
+++ b/drivers/adc/CMakeLists.txt
@@ -50,3 +50,4 @@ zephyr_library_sources_ifdef(CONFIG_ADC_AD5592	        adc_ad5592.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_LTC2451 adc_ltc2451.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_NUMAKER         adc_numaker.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_ENE_KB1200	adc_ene_kb1200.c)
+zephyr_library_sources_ifdef(CONFIG_ADC_AMBIQ         adc_ambiq.c)
