--- a/tests/bluetooth/shell/boards/nrf5340_audio_dk_nrf5340_cpuapp.conf
+++ b/tests/bluetooth/shell/boards/nrf5340_audio_dk_nrf5340_cpuapp.conf
@@ -4,7 +4,7 @@ CONFIG_LIBLC3=y
 CONFIG_RING_BUFFER=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_AUDIO=y
-CONFIG_USB_DEVICE_PRODUCT="Zephyr Shell USB"
+CONFIG_USB_DEVICE_PRODUCT="Zephyr Shell USB 73"
 # The LC3 codec uses a large amount of stack. This app runs the codec in the work-queue, hence
 # inctease stack size for that thread.
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
