drivers: timer: riscv_machine_timer: add 32-bit access on 64-bit cpus
some riscv64 CPUs, like Sophgo's CV180xB, do not provide a 64-bit
access to the MTIME/MTIMECMP registers.

Signed-off-by: GP Orcullo <kinsamanka@gmail.com>

--- a/dts/bindings/timer/sifive,clint0.yaml
+++ b/dts/bindings/timer/sifive,clint0.yaml
@@ -10,3 +10,8 @@ include: base.yaml
 properties:
   reg:
     required: true
+
+  use-32bit:
+    type: boolean
+    description: |
+      Access registers using 32-bit instructions on a 64-bit CPU.
