drivers: timer: riscv_machine_timer: use CSR to access mtime
Sophgo's CV180xB secondary processor does not have access to the mtime
register, use CSR time instead.

Signed-off-by: GP Orcullo <kinsamanka@gmail.com>

--- a/dts/bindings/timer/sifive,clint0.yaml
+++ b/dts/bindings/timer/sifive,clint0.yaml
@@ -15,3 +15,8 @@ properties:
     type: boolean
     description: |
       Access registers using 32-bit instructions on a 64-bit CPU.
+
+  mtime-use-csr:
+    type: boolean
+    description: |
+      Use CSR time register to access the mtime value.
