[nrf noup] test-spec: introduce specific ble-sample label
Add CI-ble-samples-test label and test spec for ble sample CI.
It has different test scope than BLE CI

Signed-off-by: Guojun Wang <guojun.wang@nordicsemi.no>

--- a/.github/test-spec.yml
+++ b/.github/test-spec.yml
@@ -68,6 +68,20 @@
       - "!include/zephyr/bluetooth/mesh/**/*"
   - "samples/bluetooth/hci_rpc/**/*"
 
+"CI-ble-samples-test":
+  - any:
+      - "drivers/bluetooth/**/*"
+  - any:
+      - "dts/arm/nordic/nrf5*"
+  - any:
+      - "subsys/bluetooth/**/*"
+      - "!subsys/bluetooth/mesh/**/*"
+      - "!subsys/bluetooth/audio/**/*"
+  - any:
+      - "include/zephyr/bluetooth/**/*"
+      - "!include/zephyr/bluetooth/mesh/**/*"
+  - "samples/bluetooth/**/*"
+
 "CI-mesh-test":
   - "subsys/bluetooth/mesh/**/*"
   - "include/zephyr/bluetooth/mesh/**/*"
