dts: arm: nxp: add devicetree clock definitions for LPC55S6x series
Add devicetree clock definitions for the LPC55S6x series. These clock
definitions describe the full clock tree for the SOC, and reuse generic
compatibles where possible. A NXP specific PLL compatible was added
since the PLL has non-generic configuration parameters.

Signed-off-by: Daniel DeGrasse <daniel.degrasse@nxp.com>

--- a/dts/arm/nxp/nxp_lpc55S6x.dtsi
+++ b/dts/arm/nxp/nxp_lpc55S6x.dtsi
@@ -26,6 +26,7 @@
 };
 
 #include "nxp_lpc55S6x_common.dtsi"
+#include "nxp_lpc55sxx_clocks.dtsi"
 
 /*
  * Explicitly enable IAP after we include the common LPC55S6X dtsi file,
