drivers: clock_mgmt: add LPC55xxx clock management code
Add code to handle clock setpoints and subsystems on the LPC55xxx series
SOCs. The clock setpoint implementation handles all clocks in the clock
tree, but should optimize to a few function calls for most setpoints, as
should the clock subsystem handler.

Note that the clock subsystem handler currently only implements support
for the Flexcomm clock frequencies, as this will be the initial driver
ported to the clock management framework.

Signed-off-by: Daniel DeGrasse <daniel.degrasse@nxp.com>

--- a/drivers/clock_mgmt/CMakeLists.txt
+++ b/drivers/clock_mgmt/CMakeLists.txt
@@ -13,6 +13,7 @@ macro(zephyr_clock_mgmt_driver_ifdef toggle driver)
   endif()
 endmacro()
 
+zephyr_clock_mgmt_driver_ifdef(CONFIG_CLOCK_MGMT_NXP_LPC55XXX clock_mgmt_lpc55xxx.c)
 
 # Force the build system to run again if the SOC clock management code
 # is edited, so we can regenerate the clock code
