--- a/west.yml
+++ b/west.yml
@@ -269,6 +269,10 @@ manifest:
     - name: liblc3
       revision: 1a5938ebaca4f13fe79ce074f5dee079783aa29f
       path: modules/lib/liblc3
+    - name: libsbc
+      revision: db58de681678f2b5639a13e5b94e71f6603380db
+      path: modules/lib/libsbc
+      url: https://github.com/nxp-upstream/libsbc.git
     - name: libmetal
       revision: a6851ba6dba8c9e87d00c42f171a822f7a29639b
       path: modules/hal/libmetal
